--- a/appveyor.yml
+++ b/appveyor.yml
@@ -36,8 +36,8 @@ after_build:
 - cmd: copy C:\projects\sadx-dreamcast-dlc\Release\DLCs_Main.dll C:\DLC\DLCs_Main.dll
 - ps: $MyProcess = Start-Process "C:\mod-manifest-gen.exe" -Wait -PassThru -ArgumentList "C:\DLC"
 - cmd: cd C:\DLC
-- cmd: 7z a DLCs.zip *
-- cmd: move DLCs.zip C:\projects\sadx-dreamcast-dlc\Release\DLCs.zip
+- cmd: 7z a DLCs.7z *
+- cmd: move DLCs.7z C:\projects\sadx-dreamcast-dlc\Release\DLCs.7z
 
 artifacts:
-- path: Release\DLCs.zip
+- path: Release\DLCs.7z
