--- a/DLCs_Main/DLCs_Main.vcxproj
+++ b/DLCs_Main/DLCs_Main.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="Metadata.cpp" />
     <ClCompile Include="mod.cpp" />
     <ClCompile Include="Objects.cpp" />
+    <ClCompile Include="SegaVoice.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -97,6 +98,7 @@
     <ClInclude Include="CircuitMenu.h" />
     <ClInclude Include="Metadata.h" />
     <ClInclude Include="SADXData.h" />
+    <ClInclude Include="SegaVoice.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
