--- a/DLCs_Main/DLCs_Main.vcxproj.filters
+++ b/DLCs_Main/DLCs_Main.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="SegaVoice.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Lantern.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targetver.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SegaVoice.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="lanternapi.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
